# skua

./: .env.example  .gitignore  AUDIT_REPORT.md  Makefile  README.md
bot/: Cargo.toml
bot/crates/api/: Cargo.toml
bot/crates/api/src/: lib.rs  metrics.rs  telegram.rs
bot/crates/chain/: Cargo.toml
bot/crates/chain/src/: block_loop.rs  fee_refresh.rs  lib.rs  pool_monitor.rs  providers.rs
bot/crates/core/: Cargo.toml
bot/crates/core/src/: config.rs  gas.rs  lib.rs  state.rs  types.rs
bot/crates/executor/: Cargo.toml
bot/crates/executor/src/: lib.rs  submit.rs  wallet_pool.rs
bot/crates/hypercore/: Cargo.toml
bot/crates/hypercore/src/: corewriter.rs  lib.rs  orderbook.rs  precompile.rs
bot/crates/scanner/: Cargo.toml
bot/crates/scanner/src/: lib.rs  pipeline.rs  s1_signal.rs  s4_signal.rs
bot/crates/simulation/: Cargo.toml
bot/crates/simulation/src/: amm.rs  eth_call.rs  lib.rs  profit.rs  sizing.rs
bot/crates/strategies/evm_arb/: Cargo.toml
bot/crates/strategies/evm_arb/src/: executor.rs  lib.rs  phase.rs
bot/crates/strategies/liquidation/: Cargo.toml
bot/crates/strategies/liquidation/src/: executor.rs  lib.rs  monitor.rs  sizing.rs
bot/crates/strategies/stable_depeg/: Cargo.toml
bot/crates/strategies/stable_depeg/src/: executor.rs  lib.rs
bot/crates/strategies/triangular/: Cargo.toml
bot/crates/strategies/triangular/src/: executor.rs  graph.rs  lib.rs
bot/src/: main.rs
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: EvmArbExecutor.sol  LiquidationExecutor.sol  SkuaBase.sol  StableDepegExecutor.sol  TriArbExecutor.sol
contracts/test/: EvmArbExecutor.t.sol  LiquidationExecutor.t.sol  SkuaBase.t.sol  StableDepegExecutor.t.sol  TriArbExecutor.t.sol
