[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/chain",
    "crates/hypercore",
    "crates/scanner",
    "crates/simulation",
    "crates/executor",
    "crates/api",
    "crates/strategies/evm_arb",
    "crates/strategies/liquidation",
    "crates/strategies/triangular",
    "crates/strategies/stable_depeg",
    ".",
]

[package]
name    = "skua"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "skua"
path = "src/main.rs"

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.78"

[workspace.dependencies]
# Async runtime
tokio        = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Ethereum / alloy
alloy        = { version = "0.3", features = [
    "full",
    "providers",
    "rpc",
    "sol-types",
    "network",
    "signers",
    "contract",
    "transports-ws",
    "transports-http",
] }

# Error handling
anyhow    = "1"
thiserror = "1"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"

# Misc
rand        = "0.8"
futures     = "0.3"
once_cell   = "1"
parking_lot = "0.12"

[dependencies]
skua-core                  = { path = "crates/core" }
skua-chain                 = { path = "crates/chain" }
skua-hypercore             = { path = "crates/hypercore" }
skua-simulation            = { path = "crates/simulation" }
skua-scanner               = { path = "crates/scanner" }
skua-executor              = { path = "crates/executor" }
skua-api                   = { path = "crates/api" }
skua-strategy-evm-arb      = { path = "crates/strategies/evm_arb" }
skua-strategy-liquidation  = { path = "crates/strategies/liquidation" }
skua-strategy-triangular   = { path = "crates/strategies/triangular" }
skua-strategy-stable-depeg = { path = "crates/strategies/stable_depeg" }
tokio.workspace     = true
anyhow.workspace    = true
tracing.workspace   = true
tracing-subscriber.workspace = true

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
panic         = "abort"          # AUDIT FIX #21: no stack unwinding in production
