[package]
name    = "skua-executor"
version.workspace = true
edition.workspace = true

[dependencies]
skua-core  = { path = "../core" }
skua-chain = { path = "../chain" }
alloy.workspace     = true
anyhow.workspace    = true
tokio.workspace     = true
tracing.workspace   = true
serde.workspace     = true
serde_json.workspace = true
rand.workspace      = true
