[package]
name    = "skua-hypercore"
version.workspace = true
edition.workspace = true

[dependencies]
skua-core  = { path = "../core" }
skua-chain = { path = "../chain" }
alloy.workspace      = true
anyhow.workspace     = true
tokio.workspace      = true
tokio-stream.workspace = true
tracing.workspace    = true
serde.workspace      = true
serde_json.workspace = true
futures.workspace    = true
tokio-tungstenite    = { version = "0.23", features = ["native-tls"] }
url                  = "2"
